--- a/index.html
+++ b/index.html
@@ -52,19 +52,28 @@
 
     <script>
         // Función para cargar novedades desde el JSON
-        fetch('productos.json')
-            .then(response => response.json())
-            .then(data => {
-                const grid = document.getElementById('novedades-grid');
-                grid.innerHTML = data.slice(0, 3).map(p => `
-                    <div class="bg-white rounded-2xl shadow-sm hover:shadow-xl transition-all p-5 border border-gray-100 flex flex-col">
-                        <img src="${p.imagen}" alt="${p.nombre}" class="h-48 w-full object-contain mb-4">
-                        <h3 class="font-bold text-gray-800 mb-2 h-12 overflow-hidden">${p.nombre}</h3>
-                        <p class="text-2xl font-black text-orange-600 mb-4">${p.precio}€</p>
-                        <a href="${p.link}" target="_blank" class="bg-orange-500 text-white text-center py-3 rounded-xl font-bold hover:bg-orange-600 transition-colors">Ver en Amazon</a>
+       <script>
+    fetch('productos.json')
+        .then(response => response.json())
+        .then(data => {
+            const grid = document.getElementById('novedades-grid');
+            grid.innerHTML = data.slice(0, 3).map(p => `
+                <div class="bg-white rounded-2xl shadow-md hover:shadow-xl transition-all p-5 border border-gray-100 flex flex-col h-full relative">
+                    <div class="h-48 w-full mb-4 flex items-center justify-center overflow-hidden rounded-lg bg-gray-50">
+                        <img src="${p.imagen}" alt="${p.nombre}" class="max-h-full max-w-full object-contain">
                     </div>
-                `).join('');
-            });
-    </script>
+                    
+                    <h3 class="font-bold text-gray-800 mb-2 h-12 overflow-hidden text-sm line-clamp-2">${p.nombre}</h3>
+                    <p class="text-2xl font-black text-orange-600 mb-4">${p.precio}€</p>
+                    
+                    <a href="${p.link}" target="_blank" 
+                       class="block w-full text-center bg-orange-500 hover:bg-orange-600 text-white font-extrabold py-3 rounded-xl transition-colors shadow-sm relative z-10">
+                        VER CHOLLO EN AMAZON
+                    </a>
+                </div>
+            `).join('');
+        })
+        .catch(err => console.error("Error cargando productos:", err));
+</script>
 </body>
 </html>
