--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <style>
         .logo-text { font-family: 'Arial Black', sans-serif; letter-spacing: -1px; text-shadow: 2px 2px 0px rgba(0,0,0,0.1); }
         .gradient-bg { background: linear-gradient(135deg, #f97316 0%, #dc2626 100%); }
-        /* Animación para que la IA aparezca suavemente */
         #ai-chat-root { min-height: 400px; transition: all 0.5s ease-in-out; }
     </style>
 </head>
@@ -28,9 +27,9 @@
             <nav>
                 <ul class="flex space-x-4 md:space-x-6 text-sm font-black uppercase tracking-tighter">
                     <li><a href="catalogo.html" class="bg-white bg-opacity-10 px-3 py-2 rounded-lg hover:bg-yellow-400 hover:text-red-700 transition-all">Catálogo</a></li>
-                    <li><a href="ranking.html" class="hover:text-yellow-300">Ranking</a></li>
-                    <li><a href="blog.html" class="hover:text-yellow-300">Blog</a></li>
-                    <li><a href="contacto.html" class="hover:text-yellow-300">Contacto</a></li>
+                    <li><a href="ranking.html" class="hover:text-yellow-300 transition-colors">Ranking</a></li>
+                    <li><a href="blog.html" class="hover:text-yellow-300 transition-colors">Blog</a></li>
+                    <li><a href="contacto.html" class="hover:text-yellow-300 transition-colors">Contacto</a></li>
                 </ul>
             </nav>
         </div>
