--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="ofertas amazon, chollos hoy, mejores ofertas, buscador chollos ia, ahorrar amazon, lavadoras baratas, freidoras aire">
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
     
     <style>
         .logo-text { font-family: 'Arial Black', sans-serif; letter-spacing: -1px; text-shadow: 2px 2px 0px rgba(0,0,0,0.1); }
