--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link href="style.css" rel="stylesheet">
     
     <style>
-        /* Fuentes y colores corporativos */
         .logo-text { font-family: 'Arial Black', sans-serif; letter-spacing: -1px; }
         .gradient-bg { background: linear-gradient(135deg, #f97316 0%, #dc2626 100%); }
-        /* Animación para que los mensajes entren suaves */
+        /* Animación suave para los mensajes */
         .msg-enter { animation: slideUp 0.3s ease-out forwards; }
         @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
@@ -41,7 +40,7 @@
                 ¿Qué quieres comprar <span class="text-orange-600 italic">hoy</span>?
             </h1>
             <p class="text-xl text-gray-600 max-w-2xl mx-auto font-medium">
-                Nuestra Inteligencia Artificial rastrea los mejores chollos de Amazon por ti.
+                Tu asistente experto en buscar chollos en Amazon.
             </p>
         </div>
 
@@ -70,13 +69,11 @@
 
             <div class="p-4 bg-white border-t flex items-center gap-2">
                 <input type="text" id="user-input" 
-                    class="flex-1 p-3 bg-gray-100 rounded-2xl focus:outline-none focus:ring-2 focus:ring-orange-500 font-bold text-sm text-gray-700" 
+                    class="flex-1 p-3 bg-gray-100 rounded-2xl focus:outline-none focus:ring-2 focus:ring-orange-500 font-bold text-sm" 
                     placeholder="Escribe aquí (ej: zapatillas Nike)...">
                 <button id="send-btn" 
                     class="bg-orange-600 p-3 rounded-2xl text-white hover:bg-red-700 transition-all shadow-lg active:scale-95 transform hover:rotate-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="3" d="M14 5l7 7m0 0l-7 7m7-7H3" />
-                    </svg>
+                    ➤
                 </button>
             </div>
         </div>
@@ -94,7 +91,6 @@
 
     <footer class="bg-gray-900 text-gray-400 p-12 mt-20 text-center border-t-4 border-orange-600">
         <p class="text-white font-bold uppercase tracking-widest">MejoresOfertas.es</p>
-        <p class="text-xs mt-2">© 2025 - Potenciado con IA</p>
     </footer>
 
     <script src="app.js"></script>
@@ -106,7 +102,7 @@
                 grid.innerHTML = data.slice(0, 6).map(p => `
                     <div class="bg-white rounded-3xl shadow-lg p-6 border border-gray-100 flex flex-col h-full group hover:shadow-2xl transition-all">
                         <div class="h-48 w-full mb-4 flex items-center justify-center overflow-hidden rounded-2xl bg-gray-50">
-                            <img src="${p.imagen}" class="max-h-full max-w-full object-contain p-4 transform group-hover:scale-110 transition-transform">
+                            <img src="${p.imagen}" alt="${p.nombre}" class="max-h-full max-w-full object-contain p-4 transform group-hover:scale-110 transition-transform">
                         </div>
                         <h3 class="font-extrabold text-gray-800 mb-2 h-10 overflow-hidden line-clamp-2">${p.nombre}</h3>
                         <div class="mt-auto flex justify-between items-center">
